# multi-agent-orchestrator

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  coverage.xml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: api_reference.md  index.md
docs/guides/: handoffs.md
examples/: basic_workflow.py  complex_workflow.py  fastapi_wrapper.py  logging_handler.py
multi_agent_orchestrator/: __init__.py
multi_agent_orchestrator/core/: __init__.py  agent.py  config.py  events.py  memory.py  orchestrator.py  redis_backend.py  sqlite_backend.py
tests/: conftest.py  test_agent.py  test_config.py  test_events.py  test_lazy_imports.py  test_memory.py  test_orchestrator.py  test_redis_backend.py  test_sqlite_backend.py
