[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-agent-orchestrator"
version = "0.1.0"
description = "An asynchronous, Gemini-powered framework for multi-agent orchestration."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "google-genai>=0.5.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0"
]

[tool.setuptools.packages.find]
include = ["multi_agent_orchestrator*"]
