[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-agent-orchestrator"
version = "0.1.0"
description = "An asynchronous, Gemini-powered framework for multi-agent orchestration."
authors = [
    { name = "gbvk", email = "gbvk.312@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: AsyncIO",
]


dependencies = [
    "google-genai>=2.6.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/gbvk312/multi-agent-orchestrator"
Repository = "https://github.com/gbvk312/multi-agent-orchestrator"
Issues = "https://github.com/gbvk312/multi-agent-orchestrator/issues"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.4.0",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "redis>=7.4.0",
    "aiosqlite>=0.22.1",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.4",
]
storage = [
    "redis>=7.4.0",
    "aiosqlite>=0.22.1",
]
api = [
    "fastapi>=0.136.3",
    "uvicorn>=0.48.0",
]

[tool.setuptools.packages.find]
include = ["multi_agent_orchestrator*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=multi_agent_orchestrator --cov-report=term-missing --cov-report=xml --cov-fail-under=100"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# E = pycodestyle, F = pyflakes, I = isort, UP = pyupgrade
# B = bugbear, SIM = simplify

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
